# Daedalus

./: .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt
example/src/: FontAwesome6.h  LightTheme.cpp  main.cpp
examples/AnimatedWindow/: CMakeLists.txt  main.cpp
examples/CustomWindow/: CMakeLists.txt  LightTheme.cpp  LightTheme.h  main.cpp
examples/DynamicLinkExample/: CMakeLists.txt  main.cpp
examples/ImageDisplay/: CMakeLists.txt  main.cpp
examples/SimpleWindow/: CMakeLists.txt  main.cpp
include/: Daedalus.h
src/: Core.h  EntryPoint.h  Logger.cpp  Logger.h
src/Images/: ImageDescriptor.h  ImageLoader.cpp  ImageLoader.h
src/Themes/: ImGuiFont.cpp  ImGuiFont.h  ImGuiTheme.cpp  ImGuiTheme.h
src/Utils/: Utils.cpp  Utils.h
src/Utils/Easing/: Easing.cpp  Easing.h
src/Window/: Win32Window.cpp  Win32Window.h  Window.cpp  Window.h
src/Window/ImGuiBackends/: imgui_impl_win32.cpp
